--- a/WEB/index.html
+++ b/WEB/index.html
@@ -1,10 +1,14 @@
-<html> 
+<!DOCTYPE html>
+<html lang="en"> 
     <head>
-    <title>Peso Ideal</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Peso Ideal</title>
+        <script src="js/funciones.js"></script>
     </head>
     <body>
         <div>
-            <h1>Peso ideal App</h1>
+            <h1>Peso ideal</h1>
             <hr>
         </div>
         <div>
@@ -12,18 +16,22 @@
             <form>
                 <table>
                     <tr>
-                        <td>Edad</td>
+                        <td>Edad: </td>
                         <td> <input type="number" id="txt_edad"> </tr>
                     </tr>
                     <tr>
-                        <td>Peso</td>
+                        <td>Peso Actual: </td>
                         <td> <input type="number" id="txt_peso_actual"> </tr>
                     </tr>
                     <tr>
-                        <td> <input type="button" value="Calcular"></td>
+                        <td> <input type="button" value="Calcular" onclick="calcularPesoIdeal();"> </onclick> </td>
                     </tr>
                 </table>
             </form>
+            <!--Resuktado-->
+            <div id="cnt_peso_ideal"></div>
+            <div id="cnt_estado"></div> </div>
+            <div id="cnt_imagen"></div> </div>
         </div>
     </body>
 </html>
