--- a/WEB/index.html
+++ b/WEB/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Peso Ideal</title>
         <script src="js/funciones.js"></script>
+        <script src="css/estilo.css"></script>
     </head>
     <body>
         <div>
@@ -28,10 +29,11 @@
                     </tr>
                 </table>
             </form>
-            <!--Resuktado-->
+            <!--Resultado-->
             <div id="cnt_peso_ideal"></div>
-            <div id="cnt_estado"></div> </div>
-            <div id="cnt_imagen"></div> </div>
+            <div id="cnt_estado"></div> 
+            <div id="cnt_diferencia"></div>
+            <div id="cnt_imagen"></div> 
         </div>
     </body>
 </html>
